tests/compile-fail/suzu_from_location_cross_attr.rs
use suzunari_error::*;

#[suzunari_error]
#[suzu(display("bad"))]
struct BadError {
    #[suzu(from)]
    #[suzu(location)]
    source: Location,
}

fn main() {}
